gcc/testsuite/gdc.test/compilable/test22825.d
// https://issues.dlang.org/show_bug.cgi?id=22825
#line /*
         multi-line comment
*/ 42
